# Summarizer-Agent-

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  retrieve_server.py  retrieveserver.py
